@@ -14,6 +14,8 @@ Changes in 3.0.2
        Fixes bug #472.
 * FIX: Remove length limitation of options like "valid users".
        Fixes bug #473.
+* FIX: Dont copy our metadata EA in copyfile().
+       Fixes bug #452.
 * REM: Remove TimeMachine volume used size FCE event.
 
 Changes in 3.0.1
